# Turboquant-CUDA

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  implementation_plan.md  pyproject.toml  repo_contract.toml  requirements.txt
.claude/: settings.local.json
.codex/: config.toml
_docs/: 2026-03-26_Qwen3.5-9B-TurboQuant-runtime_Codex.md  2026-03-26_UV-3.12.9-cu128-Qwen3.5-9B-TurboQuant_Codex.md  2026-03-27_Captured-KV-replay-panel_Codex.md  2026-03-27_Captured-results-publication-refresh_Codex.md  2026-03-27_Exact-vs-TurboQuant-chat-compare_Codex.md  2026-03-27_Hypura-TurboQuant-handoff-plan_Codex.md  2026-03-27_KV-cache-reduction-research-plan-implementation_Codex.md  2026-03-27_PyTorch-first-paper-baseline-and-kv-split-research_Codex.md  2026-03-27_TurboQuant-Pareto-comparison_Codex.md  2026-03-27_TurboQuant-V-redesign-ablation_Codex.md  2026-03-27_TurboQuant-faithful-rebuild-key-only-analysis_Codex.md  2026-03-29_README-Triality-MeanSD-hub_Qwen3.5-9B-SOT.md  2026-03-29_README-bilingual_hub_Qwen3.5-9B-SOT.md  2026-03-29_Triality-advantage-plots_hub_Qwen3.5-9B-SOT.md  2026-03-29_TurboQuant-UV実行検証_hub_Qwen3.5-9B-SOT.md  2026-03-29_プラン実行本番KV論文Triality_hub_Qwen3.5-9B-SOT.md  2026-04-04_VRAM-multigroup-multiscreen-triality_hub_Qwen3.5-9B-SOT.md  2026-04-04_rust-hypura-desktop-mirror_hub_Qwen3.5-9B-SOT.md  2026-04-04_turboquant-multiscreen-kobold-gui_hub_Qwen3.5-9B-SOT.md  2026-04-04_研究再利用設計・CLAUDE.md作成・Multiscreenフィードバック統合設計_ClaudeSonnet4-6.md  2026-04-15_TurboQuant-aware-GGUF-embedding_hub_Qwen3.5-9B-SOT.md  2026-04-15_vendor-llama-cpp_zapabob-sync_01.md  2026-04-16_Hypura-0.7.0-upstream-sync_hub_Qwen3.5-9B-SOT.md  2026-04-16_RTX3060-lane-presets_hub_Qwen3.5-9B-SOT.md  2026-04-16_RTX3060-matrix-closeout_hub_Qwen3.5-9B-SOT.md  2026-04-16_RTX3060-matrix-mainline-publish_hub_Qwen3.5-9B-SOT.md  2026-04-16_RTX3060-plan-refresh_hub_Qwen3.5-9B-SOT.md  2026-04-17_README-qwen-3060-matrix-stats-refresh_hub_Qwen3.5-9B-SOT.md  2026-04-17_current-main-zapabob-runtime-audit_hub_Qwen3.5-9B-SOT.md  2026-04-17_online-eval-pipeline-and-paper-audit_hub_Qwen3.5-9B-SOT.md  2026-04-18_README-mainline-rewrite_hub_Qwen3.5-9B-SOT.md  2026-04-18_README-runtime-audit-cleanup_hub_Qwen3.5-9B-SOT.md  2026-04-18_README-stat-figure-restore_hub_Qwen3.5-9B-SOT.md  2026-04-18_turboquant-studio-v1-foundation_hub_Qwen3.5-9B-SOT.md  2026-04-19_clean-redownload-handoff_hub_Qwen3.5-9B-SOT.md  2026-04-19_llama_cpp_tq4_1s_ggml_loadable_path.md  (+15 more)
(+713 files in other folders)
