[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-qwen35"
version = "0.1.0"
description = "Paper-faithful TurboQuant prototype for Qwen3.5-9B KV-cache experiments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "pandas>=2.2",
  "plotly>=6.0",
  "pydantic>=2.10",
  "scipy>=1.14",
  "tqdm>=4.67",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
cu128 = [
  "torch>=2.5",
]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
]
hf_qwen = [
  "accelerate>=1.5",
  "bitsandbytes>=0.45",
  "safetensors>=0.5",
  "sentencepiece>=0.2",
  "transformers>=4.52",
]
eval = [
  "accelerate>=1.5",
  "bitsandbytes>=0.45",
  "datasets>=4.8",
  "evaluate>=0.4",
  "lm-eval[api]>=0.4.11",
  "openai>=2.0",
  "safetensors>=0.5",
  "sentencepiece>=0.2",
  "transformers>=4.52",
]
multiscreen_parity = [
  "multiscreen-pytorch @ git+https://github.com/zapabob/multiscreen-pytorch.git",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.packages.find]
include = ["turboquant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
